--- a/package.json
+++ b/package.json
@@ -16,25 +16,26 @@
     }
   },
   "devDependencies": {
+    "husky": "^3.1.0",
+    "npm-run-all": "^4.1.5"
+  },
+  "dependencies": {
     "@fullhuman/postcss-purgecss": "^1.3.0",
     "@tailwindcss/custom-forms": "^0.2.1",
     "autoprefixer": "^9.7.3",
     "cssnano": "^4.1.10",
-    "husky": "^3.1.0",
-    "npm-run-all": "^4.1.5",
     "postcss-cli": "^6.1.3",
     "postcss-import": "^12.0.1",
-    "rollup": "^1.27.9",
-    "rollup-plugin-commonjs": "^10.0.0",
-    "rollup-plugin-livereload": "^1.0.0",
+    "rollup": "^1.27.11",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-livereload": "^1.0.4",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-svelte": "^5.0.3",
-    "rollup-plugin-terser": "^5.1.2",
+    "rollup-plugin-svelte": "^5.1.1",
+    "rollup-plugin-terser": "^5.1.3",
+    "sirv": "^0.4.2",
     "sirv-cli": "^0.4.5",
-    "svelte": "^3.0.0",
+    "svelte": "^3.16.4",
+    "svelte-routing": "^1.4.0",
     "tailwindcss": "^1.1.4"
-  },
-  "dependencies": {
-    "svelte-routing": "^1.4.0"
   }
 }
