--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tailwindcss/custom-forms": "^0.2.1",
     "autoprefixer": "^9.7.3",
     "cssnano": "^4.1.10",
+    "netlify-lambda": "^1.6.3",
     "postcss-cli": "^6.1.3",
     "postcss-import": "^12.0.1",
     "rollup": "^1.27.11",
@@ -36,6 +37,7 @@
     "sirv-cli": "^0.4.5",
     "svelte": "^3.16.4",
     "svelte-routing": "^1.4.0",
-    "tailwindcss": "^1.1.4"
+    "tailwindcss": "^1.1.4",
+    "x-ray": "^2.3.4"
   }
 }
