--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     }
   },
   "devDependencies": {
+    "@rollup/plugin-replace": "^2.3.1",
+    "dotenv": "^8.2.0",
     "husky": "^3.1.0",
     "npm-run-all": "^4.1.5"
   },
