--- a/public/now.json
+++ b/public/now.json
@@ -5,8 +5,7 @@
       "CBU": "@cbu",
       "CBU_ALIAS": "@cbu_alias",
       "BTC_WALLET": "@btc_wallet",
-      "PAYMENTS_SERVICE_WARMUP_URL": "@payments_service_warmup_url",
-      "PAYMENTS_SERVICE_URL": "@payments_service_url"
+      "PAYMENTS_SERVICE": "@payments_service"
     }
   }
 }
